--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
