--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DATABASE_URL=mysql://root:123456@localhost:3306/kioskoapp
+
+# DATABASE_URL=mysql://root:hcUCVgZTSakXLwTcUtin@containers-us-west-120.railway.app:6129/railway
